Added some minor amends to heroes

--- a/index-3.html
+++ b/index-3.html
@@ -115,9 +115,9 @@
                         <div>
                             <header>
                                 <h1>Recruitment Software</h1>
-                                <p class="pd-hero-5-headline">Reduce data entry. Eliminate paperwork. Boost quality time with your customers.</p>
+                                <p class="pd-hero-5-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
-                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <p class="pd-hero-5-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
                             <footer>
                                 <form role="form" class="pd-hero-5-cta"> 
                                     <div> 
