--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                 <h1>Recruitment Software</h1>
                                 <p class="pd-hero-7-headline">Take back hours of data entry. Throw away your paper stacks. Focus on retaining candidates and clients.</p>
                             </header>
-                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, engineered by recruiters for recruiters.</p>
+                            <p class="pd-hero-7-subHeadline">Intuitive temporary staffing software, run by recruiters.</p>
                             <footer>
                                 <form role="form" class="pd-hero-7-cta"> 
                                     <div> 
