--- a/_factory_testimonials.html
+++ b/_factory_testimonials.html
@@ -124,7 +124,6 @@
                                     <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
                                 </picture>
-                                
                             </div>
                             <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
                                 <p class="mb-0 text-center text-sm-start">Client Name</p>
@@ -137,7 +136,7 @@
             <div class="container pb-3 pt-5 text-end">
                 <div class="row">
                     <div class="col text-center text-md-end">
-                        <a name="anchor" class="pd-testimonial-1-link pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                        <a name="anchor" class="pd-testimonial-3-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
                     </div>
                 </div>
             </div>
@@ -145,6 +144,63 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-4</p>
+            </div>
+        </section>
+        <section style="position: relative;" class="pd-testimonial-4">
+            <div class="pd-testimonial-4-image-wrapper">
+                <picture>
+                    <source srcset="/images/uploads/hero-testimonials.webp 1800w, 
+                                    /images/uploads/hero-testimonials-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
+                    <img srcset="/images/uploads/hero-testimonials.jpg 1800w,
+                                /images/uploads/hero-testimonials-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-testimonials.jpg" loading="lazy"/>
+                </picture>
+            </div>
+            <div class="pd-testimonial-4-overlay pg-empty-placeholder"></div>
+            <div class="container pb-4" style="position: relative; z-index: 1;">
+                <div class="row">
+                    <div class="col pb-3 text-center">
+                        <h2 class="text-center">Testimonial</h2> 
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col" style="position: relative;">
+                        <div class="left pd-testimonial-4-quotes">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white.svg">
+                        </div>
+                        <div class="pd-testimonial-4-quotes right">
+                            <img alt="icon of a quote mark" width="80" height="80" src="images/design-assets/icon-quote-mark-2-white-end.svg">
+                        </div>
+                        <div class="pd-testimonial-4-mainText pe-3 pe-lg-5 ps-3 ps-lg-5">
+                            <p class="pd-testimonial-4-quotation text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ullamcorper justo sed eros sagittis, nec consectetur quam fringilla. Nulla faucibus rhoncus libero, at efficitur diam lobortis a.</p>
+                        </div>
+                        <div class="pd-testimonial-4-author">
+                            <div>
+                                <picture>
+                                    <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
+                                    <img src="/images/uploads/testimonial-woman.jpg" alt="image of testimonial author" width="140" height="140">
+                                </picture>
+                            </div>
+                            <div style="display: flex; flex-direction: column; justify-content: center;" class="ps-2">
+                                <p class="mb-0 text-center text-sm-start">Client Name</p>
+                                <p class="fw-bolder mb-0 text-center text-sm-start">Client Business</p>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5 text-end" style="z-index: 1; position: relative;">
+                <div class="row">
+                    <div class="col text-center text-md-end">
+                        <a name="anchor" class="pd-testimonial-4-link">Hear from more of our clients...<span><img alt="icon of an arrow" width="20" height="20" src="images/design-assets/icon-arrow-01.svg"></span></a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-testimonial-5</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
