Added new cards

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -15,15 +15,15 @@
     <body>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-1</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-1 (cards as links)</p>
             </div>
         </section>
         <section class="pb-5 pd-cards-1 pt-5">
             <div class="container pb-3">
                 <div class="row">
                     <header class="col pb-2 text-center">
-                        <h2>Our Services</h2> 
-                        <div class="pd-cards-1-headline">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class=" pd-cards-1-headline">
                             <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
                         </div>
                         <div class="pd-cards-1-subHeadline">
@@ -36,10 +36,10 @@
                 <div class="row">
                     <article class="col-md-4 d-flex flex-column">
                         <a href="#" name="anchor" class="d-flex flex-column flex-grow-1 pd-cards-1-card-outer"><div class="pd-cards-1-image-outer">
-                            <picture>
-                                <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
-                                <img src="/images/uploads/cards-sample-1.jpg" alt="image for the card" width="200" height="180" loading="lazy">
-                            </picture>
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
                             </div><div class="flex-grow-1 pd-cards-1-body">
                                 <h3>Nullam commodo erat id urna tempor ornare.</h3>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
@@ -49,12 +49,11 @@
                     </article>
                     <article class="col-md-4 d-flex flex-column">
                         <a href="#" name="anchor" class="d-flex flex-column flex-grow-1 pd-cards-1-card-outer"><div class="pd-cards-1-image-outer">
-
-                            <picture>
-                                <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
-                                <img src="/images/uploads/cards-sample-2.jpg" alt="image for the card" width="200" height="180" loading="lazy">
-                            </picture>
-                        </div><div class="flex-grow-1 pd-cards-1-body">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-2.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div><div class="flex-grow-1 pd-cards-1-body">
                                 <h3>Pellentesque vitae ligula ex.</h3>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div><footer class="pd-cards-1-footer">
@@ -63,12 +62,11 @@
                     </article>
                     <article class="col-md-4 d-flex flex-column">
                         <a href="#" name="anchor" class="d-flex flex-column flex-grow-1 pd-cards-1-card-outer"><div class="pd-cards-1-image-outer">
-                            <picture>
-                                <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
-                                <img src="/images/uploads/cards-sample-3.jpg" alt="image for the card" width="200" height="180" loading="lazy">
-                            </picture>
-
-                        </div><div class="flex-grow-1 pd-cards-1-body">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-3.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div><div class="flex-grow-1 pd-cards-1-body">
                                 <h3>Vestibulum blandit eu&nbsp; mattis. Suspendisse non pulvinar tellus.</h3>
                                 <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
                             </div><footer class="pd-cards-1-footer">
@@ -77,10 +75,121 @@
                     </article>
                 </div>
             </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-1-link">Explore more features... <span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </footer>
+                </div>
+            </div>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-2</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-2 (no link on cards)</p>
+            </div>
+        </section>
+        <section class="pb-5 pd-cards-2 pt-5">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class="pd-cards-2-headline">
+                            <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
+                        </div>
+                        <div class="pd-cards-2-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <article class="col-md-4 d-flex flex-column">
+                        <div class="pd-cards-2-card-outer">
+                            <div class="pd-cards-2-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="flex-grow-1 pd-cards-2-body">
+                                <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                                <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
+                            </div>
+                        </div>                         
+                    </article>
+                    <article class="col-md-4 d-flex flex-column">
+                        <div class="pd-cards-2-card-outer">
+                            <div class="pd-cards-2-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-2.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="flex-grow-1 pd-cards-2-body">
+                                <h3>Pellentesque vitae ligula ex.</h3>
+                                <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
+                            </div>
+                        </div>                         
+                    </article>
+                    <article class="col-md-4 d-flex flex-column">
+                        <div class="pd-cards-2-card-outer">
+                            <div class="pd-cards-2-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-3.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div>
+                            <div class="flex-grow-1 pd-cards-2-body">
+                                <h3>Vestibulum blandit eu  mattis. Suspendisse non pulvinar tellus.</h3>
+                                <p>Proin justo urna, malesuada quis tincidunt ut, laoreet quis quam. Donec quis quam vel nibh aliquet tristique.</p>
+                            </div>
+                        </div>                         
+                    </article>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-2-link">Explore more features... <span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-3</p>
+            </div>
+        </section>
+        <section class="pd-cards-3">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class="pd-cards-3-headline">
+                            <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
+                        </div>
+                        <div class="pd-cards-3-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <a href="#" class="pd-cards-4-outer"><div class="pd-cards-4-image-outer">
+                                <img src="http://pinegrow.com/placeholders/img17.jpg">
+                            </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
+                                <h3>Nullam commodo erat id urna tempor ornare.</h3>
+                            </header></a>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-4</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
