Added more cards

--- a/_factory_cards.html
+++ b/_factory_cards.html
@@ -178,18 +178,168 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <a href="#" class="pd-cards-4-outer"><div class="pd-cards-4-image-outer">
-                                <img src="http://pinegrow.com/placeholders/img17.jpg">
+                        <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-1.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-1.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
                             </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
                                 <h3>Nullam commodo erat id urna tempor ornare.</h3>
-                            </header></a>                          
+                            </header></a> 
                     </div>
+                    <div class="col-md-4">
+                        <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-2.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-2.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
+                                <h3>Pellentesque vitae ligula ex.</h3>
+                            </header></a> 
+                    </div>
+                    <div class="col-md-4">
+                        <a href="#" class="pd-cards-3-outer"><div class="pd-cards-4-image-outer">
+                                <picture>
+                                    <source srcset="/images/uploads/cards-sample-3.webp" type="image/webp">
+                                    <img src="/images/uploads/cards-sample-3.jpg" alt="image for the card" width="200" height="180" loading="lazy">
+                                </picture>
+                            </div><div class="pd-cards-4-image-overlay"></div><header class="pd-cards-4-body">
+                                <h3>Vestibulum blandit eu mattis. Suspendisse non pulvinar tellus.</h3>
+                            </header></a> 
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-3-link">Explore more features... <span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </footer>
                 </div>
             </div>
         </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
-                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-4</p>
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-4, no links on cards</p>
+            </div>
+        </section>
+        <section class="pd-cards-4">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class="pd-cards-4-headline">
+                            <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
+                        </div>
+                        <div class="pd-cards-4-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container pt-3">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <h3>Delight your workers</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <ul> 
+                                <li>Sub Feature 1&nbsp;</li>                                 
+
+                                <li>Sub Feature 2</li>                                 
+
+                                <li>Sub Feature 3</li>                                                                  
+                            </ul>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <h3>Your brand not ours</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <ul> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul>
+                        </div>                                                  
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <div class="flex-grow-1 pd-cards-4-card-outer">
+                            <h3>Save time with automation</h3>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                            <ul> 
+                                <li>Sub Feature 1</li>                                 
+
+                                <li>Sub Feature 2</li>                                 
+
+                                <li>Sub Feature 3</li>                                                                  
+                            </ul>
+                        </div>                                                  
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-4-link">Explore more features... <span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-5 - links on cards</p>
+            </div>
+        </section>
+        <section class="pd-cards-5">
+            <div class="container pb-3">
+                <div class="row">
+                    <header class="col pb-2 text-center">
+                        <h2 class="mb-3">Our Services</h2> 
+                        <div class="pd-cards-5-headline">
+                            <p><strong>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta.</strong></p>
+                        </div>
+                        <div class="pd-cards-5-subHeadline">
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                        </div>                         
+                    </header>
+                </div>
+            </div>
+            <div class="container pt-3">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><h3>Delight your workers</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                                <li>Sub Feature 1&nbsp;</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"> <h3>Your brand not ours</h3> <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p> <ul> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                    </div>
+                    <div class="col-lg-4 col-md-6 d-flex flex-column pb-3">
+                        <a href="#" class="flex-grow-1 pd-cards-5-card-outer"><h3>Save time with automation</h3><p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p><ul> 
+                                <li>Sub Feature 1</li>                                 
+                                <li>Sub Feature 2</li>                                 
+                                <li>Sub Feature 3</li>                                 
+                            </ul><p class="pd-cards-5-readMore">Read more</p></a>                          
+                    </div>
+                </div>
+            </div>
+            <div class="container pb-3 pt-5">
+                <div class="row">
+                    <footer class="col text-end">
+                        <a href="#" name="anchor" class="pd-cards-5-link">Explore more features... <span><img src="images/design-assets/icon-arrow-secondary.svg" alt="icon of an arrow" width="20" height="20"></span></a> 
+                    </footer>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-cards-6</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
